# event-server

./: .dockerignore  Cargo.toml  Dockerfile  READEME.md  main.py  pyproject.toml  server.py
rust/src/: main.rs  models.rs  routes.rs
src/: routes.rs
