[package]
name = "event-server"
version = "0.1.0"
authors = ["rafmagns-skepa-dreag <rafmagns-skepa-dreag@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="2.0.0"
actix-web-codegen="0.2.2"
actix-rt = "1.0"
serde = "1.0.111"
log = "0.4.8"
env_logger = "0.7"
dotenv = "0.15.0"
influx_db_client = "^0.4.0"

