[tool.poetry]
name = "event-server"
version = "1.0.0"
description = "Server to handle transition from app to influxdb"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
influxdb-client = "^1.9.0"
fastapi = "^0.60.1"
uvicorn = "^0.11.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
